# icampam_2024_workshop

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  Snakefile  environment.yml  icampam.org  pyproject.toml  workshop.ipynb
.github/workflows/: python-package.yml
day_counts/: core.py
scripts/: counts.py  daily.py
tests/: small.avro  test_daily.py  test_daily.test_counts_60.approved.txt
